RESOLVED FIXED100949
[Qt] Double clicks/taps aren't passed down to the page
https://bugs.webkit.org/show_bug.cgi?id=100949
Summary [Qt] Double clicks/taps aren't passed down to the page
Jocelyn Turcotte
Reported 2012-11-01 05:45:56 PDT
[Qt] Double clicks/taps aren't passed down to the page
Attachments
Patch (6.09 KB, patch)
2012-11-01 05:52 PDT, Jocelyn Turcotte
no flags
Jocelyn Turcotte
Comment 1 2012-11-01 05:52:20 PDT
WebKit Review Bot
Comment 2 2012-11-01 06:18:35 PDT
Comment on attachment 171824 [details] Patch Clearing flags on attachment: 171824 Committed r133153: <http://trac.webkit.org/changeset/133153>
WebKit Review Bot
Comment 3 2012-11-01 06:18:38 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 4 2012-11-01 13:53:47 PDT
It broke 55 double click related test on Qt wk2, please fix the regression, if you hadn't time to run tests before commiting and watch the bots after commiting.
Csaba Osztrogonác
Comment 5 2012-11-02 02:39:20 PDT
Ping for fix?
Jocelyn Turcotte
Comment 6 2012-11-02 02:44:24 PDT
Yes I was about to upload a patch, this exposed a different bug in WTR.
Jocelyn Turcotte
Comment 7 2012-11-02 02:54:25 PDT
The regressions (at least a few of them) should be fixed with bug #101033.
Note You need to log in before you can comment on or make changes to this bug.