[Qt] Double clicks/taps aren't passed down to the page https://bugs.webkit.org/show_bug.cgi?id=100949

Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Since we are passing double click events as press events and that
they are preceeded by a real press event, double clicks are passed
down to the page as triple clicks.

Ignore double click events and let WebCore::EventHandler handle it
through press and release events.

* Shared/qt/WebEventFactoryQt.cpp:
(WebKit::webEventTypeForEvent):
* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::handleMouseEvent):
* UIProcess/qt/QtWebPageEventHandler.cpp:
(WebKit::QtWebPageEventHandler::handleInputEvent):

Tools:

Touch mocking shouldn't transform double click events as well,
this adds an extra touch update between clicks which prevents
double-tap detection from triggering on web pages.

Tested on the mobile version of Google maps.

* MiniBrowser/qt/MiniBrowserApplication.cpp:
(MiniBrowserApplication::notify):


Canonical link: https://commits.webkit.org/119020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133153 268f45cc-cd09-0410-ab3c-d52691b4dbfc