Source/WebKit2/UIProcess/qt/QtWebPageEventHandler.cpp
@@ -500,6 +500,7 @@ void QtWebPageEventHandler::handleInputEvent(const QInputEvent* event)
         m_isMouseButtonPressed = false;
         break;
     case QEvent::MouseButtonDblClick:
+        ASSERT_NOT_REACHED();
         return;
     default:
         break;
